fixes spacing and positioning of elements onscreen

--- a/src/web/views/unavailable/Unavailable.module.css
+++ b/src/web/views/unavailable/Unavailable.module.css
@@ -31,7 +31,7 @@ body {
   justify-content: space-around;
   width: 74vw;
   height: 100%;
-  /* margin-top: 300px; */
+  margin: 0px 5vw;
 }
 .unavailableContent h1 {
   font: normal normal 900 90px/118px Roboto;
@@ -67,8 +67,11 @@ body {
   display: flex;
   flex: 1;
   flex-direction: column;
+  justify-content: space-between;
+}
+.unavailableOptions div + div {
   margin-top: 10px;
-  margin-right: 32px;
+  margin-left: 32px;
 }
 .unavailableOptions img {
   margin: 5px;
@@ -80,6 +83,7 @@ section {
 }
 .unavailableTitle {
   flex-direction: row;
+  justify-content: space-between;
 }
 .unavailableIntro {
   text-align: end;
